# mlni_scuffed

./: .env.example  .gitignore  DATA_FORMAT.md  README.md  dataset.py  logger.py  pyproject.toml  requirements.txt  stim_data_exploration.ipynb  train.py
config/: config.yaml
config/cluster/: default.yaml
config/data/: default.yaml
config/model/: large.yaml
config/training/: train_subject_trials.yaml
data_converter/: README.md  pyproject.toml  stim_data_exploration.ipynb
data_converter/data_converter/session/: vanblooijs_hermes_developmental_2023.py
ieeg_temporaldata/: README.md  pyproject.toml
ieeg_temporaldata/ieeg_temporaldata/session/: __init__.py  base.py  braintreebank.py  vanblooijs_hermes_developmental_2023.py  wang_barbu_braintreebank_2023.py
mlni/: .gitignore  README.md  pyproject.toml
mlni/.github/workflows/: ci.yml
mlni/mlni/dataset/: __init__.py  multi_session.py  sampler.py  single_session.py
mlni/mlni/preprocess/: __init__.py  electrode_subset.py  laplacian_rereferencing.py  spectrogram.py
mlni/tests/unit/preprocess/: helpers.py  test_electrode_subset.py  test_spectrogram.py
model/: mse_ar.py
preprocess/: electrode_subset.py  laplacian_rereferencing.py  spectrogram.py
session/: base.py  braintreebank.py  vanblooijs_hermes_developmental_2023.py
train_template/: .gitignore  README.md  pyproject.toml
train_template/configs/: config.yaml
train_template/configs/model/: default.yaml
train_template/configs/training/: default.yaml
train_template/src/: train.py
train_template/src/model/: mse_ar.py
train_template/src/utils/: dataset.py  logger.py
