[project]
name = "mlni-scuffed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "hydra-core>=1.3.2",
    "mne-bids>=0.17.0",
    "pandas>=2.3.3",
    "psutil>=7.1.0",
    "python-dotenv>=1.1.1",
    "pytorch-lightning>=2.5.5",
    "temporaldata>=0.1.3",
    "transformers>=4.57.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[tool.ruff]
target-version = "py311"
line-length = 320

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501", "E402"]            # let the formatter handle wrapping
